--- a/selector_server/client/css/main.css
+++ b/selector_server/client/css/main.css
@@ -31,6 +31,16 @@ select {
 	margin-bottom:0;
 }
 
+input[type="file"] {
+	margin-top: 3px;
+	line-height: 20px;
+	width:300px;
+}
+
+a.whatsthis {
+	margin-left:20px;
+}
+
 input.smallnumerical {
 	width: 50px;
 	margin-bottom:0;
